# football-perspectives

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  extract_ball_tracks.py  pyproject.toml  recon.py  vanilla_pnlcalib.py
config/: default.yaml  stadiums.yaml
constraints/: macos-py311-openmmlab.txt
docs/: 2026-04-04-macos-dependency-handoff.md  FEATURE_IDEAS.md  football-reconstruction-pipeline-design.md  open-questions-2026-04-13.md  sync-approaches-diagnostic.md
infra/terraform/: .gitignore  README.md  batch.tf  cloudwatch.tf  (+8 more)
scripts/: blender_export_fbx.py  build_image.sh  build_test_manifest.py  extract_lines_per_frame.py  extract_smpl_neutral.py  global_solve_from_lines.py  iterative_global_solve.py  measure_anchor_residuals.py  profile_static_c.py  setup_boxmot.sh  setup_gvhmr.sh  smoke_test_gvhmr.py  terraform_env.sh
tests/: test_anchor_solver.py  test_ball_anchor_endpoints.py  test_ball_anchor_heights.py  test_ball_anchor_schema.py  test_ball_appearance_bridge.py  test_ball_flight.py  test_ball_grounded.py  test_ball_kick_anchor.py  test_ball_plausibility.py  test_ball_reconstruction.py  test_ball_spin_fit.py  test_ball_spin_presets.py  test_ball_stage.py  test_ball_stage_anchors.py  test_ball_stage_layered.py  test_ball_tracker_imm.py  test_bidirectional_smoother.py  test_blender_export_iter.py  test_blender_export_smpl_skeleton.py  test_bundle_adjust_knot_frames.py  test_bundle_adjust_p0_fixed.py  test_calibration.py  test_calibration_propagation.py  test_calibration_smoothing.py  test_camera_confidence.py  test_camera_projection.py  test_camera_stage.py  test_camera_stage_static_line.py  test_camera_track_schema.py  test_cli.py  test_cloud_batch_runner.py  test_cloud_handler.py  test_cloud_manifest.py  test_cloud_s3_io.py  test_detect_lines_for_frames.py  test_e2e_real_clip.py  test_export.py  test_export_stage.py  test_export_stage_manifest.py  test_feature_propagator.py  (+51 more)
(+130 files in other folders)
