[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "football-perspectives"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "scenedetect[opencv]>=0.6.4",
    "ultralytics>=8.0",
    "tqdm>=4.66",
    "supervision>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
